--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,14 @@
-all:sendat
- 
-OBJS = main.o openDev.o
+%.o: %.c
+    $(CC) $(CFLAGS) -c -o $@ $<
 
-sendat:$(OBJS)
-	$(CC) $(CFLAGS) -o $@ $(OBJS) -lpthread
- 
 clean:
 	rm -f sendat *.o
+
+sendat: main.o openDev.o
+	$(CC) $(CFLAGS) -o $@ $^ -lpthread
+ 
+compile: sendat
+
+install: compile
+    $(INSTALL_DIR) $(DESTDIR)/usr/bin
+    $(INSTALL_BIN) sendat $(DESTDIR)/usr/bin/
